cmake_minimum_required(VERSION 3.5)

project(npcron LANGUAGES CXX)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(NPCRON_LIBRARY_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
set(NPCRON_LIBRARY_HEADER_DIR ${CMAKE_SOURCE_DIR}/include)


file(GLOB NPCRON_LIBRARY_SOURCES
    "${NPCRON_LIBRARY_SOURCE_DIR}/*.cpp"
    )
file(GLOB_RECURSE NPCRON_LIBRARY_HEADERS
    "${NPCRON_LIBRARY_HEADER_DIR}/*.h"
    )

include_directories(${NPCRON_LIBRARY_HEADER_DIR})

add_library(npcron
    ${NPCRON_LIBRARY_SOURCES}
    ${NPCRON_LIBRARY_HEADERS}
    )

source_group(TREE ${NPCRON_LIBRARY_SOURCE_DIR} PREFIX "src" FILES ${NPCRON_LIBRARY_SOURCES})
source_group(TREE ${NPCRON_LIBRARY_HEADER_DIR} PREFIX "include" FILES ${NPCRON_LIBRARY_HEADERS})

if(NPCRON_ENABLE_TEST)
    add_subdirectory(test)
endif(NPCRON_ENABLE_TEST)
